feature:adicionando nova-mail

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,3 +20,6 @@ spring.rabbitmq.password=guest
 # Configuração do Consumidor RabbitMQ
 spring.rabbitmq.listener.simple.queue-name=messaging
 spring.rabbitmq.listener.simple.batch-size=10
+
+spring.cloud.config.git.uri=https://localhost:nova-config/
+spring.cloud.config.git.enabled=true
