--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>	
+			<groupId>org.springframework.cloud</groupId>	
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>	
+		</dependency>			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
